// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RateForAChild matches snapshot for the first item 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
  >
    <div
      class="MuiGrid-root makeStyles-label-1 MuiGrid-item MuiGrid-grid-xs-3"
    >
      1 child
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8"
        >
          <span
            class="MuiSlider-root MuiSlider-colorPrimary makeStyles-slider-3"
          >
            <span
              class="MuiSlider-rail"
            />
            <span
              class="MuiSlider-track"
            />
            <input
              type="hidden"
              value="0"
            />
            <span
              aria-orientation="horizontal"
              aria-valuemax="0"
              aria-valuemin="0"
              aria-valuenow="0"
              class="MuiSlider-thumb MuiSlider-thumbColorPrimary"
              data-index="0"
              role="slider"
              tabindex="0"
            />
          </span>
        </div>
        <div
          class="MuiGrid-root makeStyles-inlineLabeler-7 MuiGrid-item MuiGrid-grid-xs-4"
        >
          <span
            class="makeStyles-inlineLabel-8 inlineLabel"
          >
            0
          </span>
          <span
            class="makeStyles-inlineUnit-9 inlineUnit"
          >
            hr
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-1"
    />
  </div>
</DocumentFragment>
`;

exports[`RateForAChild matches snapshot for the last item 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
  >
    <div
      class="MuiGrid-root makeStyles-label-15 MuiGrid-item MuiGrid-grid-xs-3"
    >
      2 children
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8"
        >
          <span
            class="MuiSlider-root MuiSlider-colorPrimary makeStyles-slider-17"
          >
            <span
              class="MuiSlider-rail"
            />
            <span
              class="MuiSlider-track"
            />
            <input
              type="hidden"
              value="0"
            />
            <span
              aria-orientation="horizontal"
              aria-valuemax="0"
              aria-valuemin="0"
              aria-valuenow="0"
              class="MuiSlider-thumb MuiSlider-thumbColorPrimary"
              data-index="0"
              role="slider"
              tabindex="0"
            />
          </span>
        </div>
        <div
          class="MuiGrid-root makeStyles-inlineLabeler-21 MuiGrid-item MuiGrid-grid-xs-4"
        >
          <span
            class="makeStyles-inlineLabel-22 inlineLabel"
          >
            0
          </span>
          <span
            class="makeStyles-inlineUnit-23 inlineUnit"
          >
            hr
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-1"
    >
      <div
        class="MuiGrid-root makeStyles-removeIcon-16"
        data-testid="remove-rate"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root makeStyles-root-29"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <circle
            cx="12"
            cy="12"
            fill="#808b98"
            r="7.31"
          />
          <path
            d="M12 20a8 8 0 118-8 8 8 0 01-8 8zm0-14.62A6.62 6.62 0 1018.62 12 6.63 6.63 0 0012 5.38z"
            fill="#808b98"
          />
          <path
            d="M14.66 15.35a.67.67 0 01-.49-.21L8.86 9.83a.69.69 0 111-1l5.31 5.31a.68.68 0 010 1 .66.66 0 01-.51.21z"
            fill="#fff"
          />
          <path
            d="M9.34 15.35a.66.66 0 01-.48-.21.68.68 0 010-1l5.31-5.31a.69.69 0 111 1l-5.34 5.31a.67.67 0 01-.49.21z"
            fill="#fff"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
